fix(detail): members spacing (#8)

--- a/src/pages/Detail/parts/Metadata/styles.module.css
+++ b/src/pages/Detail/parts/Metadata/styles.module.css
@@ -11,3 +11,9 @@
 .text {
     margin: 0;
 }
+
+.members {
+    display: flex;
+    flex-direction: column;
+    row-gap: var(--spacing-medium);
+}
